--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -4,19 +4,19 @@ body {
     padding: 0;
     direction: rtl;
 }
-header {
+header,
+footer {
     height: 75px;
-    background-color: aqua;
+    background-color: #141533;
+    color: #fff;
     display: flex;
     align-items: center;
     padding-inline: 25px;
-    margin-bottom: 25px;
 }
 
 .home {
     width: 1200px;
-    margin-inline: auto;
-
+    margin: 25px auto 25px;
 
     & .main-post {
         
@@ -62,8 +62,8 @@ a {
 .second-section {
     margin-top: 40px;
     display: grid;
-    grid-template-columns: 20% 70%;
-    column-gap: 10%;
+    grid-template-columns: 20% 75%;
+    column-gap: 4%;
 
     & .post {
         width: 200px;
