--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     direction: rtl;
+    font-family: system-ui;
 }
 header,
 footer {
@@ -13,6 +14,9 @@ footer {
     align-items: center;
     padding-inline: 25px;
 }
+a {
+    color: #000;
+}
 
 .home {
     width: 1200px;
@@ -21,8 +25,9 @@ footer {
     & .main-post {
         
         display: grid;
-        grid-template-columns: 75% auto;
+        grid-template-columns: 1fr 2fr;
         margin-bottom: 50px;
+        background-color: aquamarine;
 
         & .image {
             width: 850px;
@@ -34,7 +39,12 @@ footer {
         }
 
         & .excerpt {
-            font-size: x-large;
+            font-size: large;
+        }
+
+        & > div {
+            align-self: center;
+            padding-inline: 20px;
         }
     }
 }
@@ -44,29 +54,32 @@ a {
 }
 
 & .image {
-    width: 250px;
+    /* width: 250px; */
+    width: 100%;
+    height: 100%;
     aspect-ratio: 16/9;
+    object-fit: cover;
 }
 
 .first-section {
     display: grid;
     grid-template-columns: auto auto auto auto;
     column-gap: 4%;
-    align-items: end;
 
     & .post {
-        width: 200px;
+        /* width: 200px; */
+        margin-bottom: 15px;
     }
 }
 
 .second-section {
     margin-top: 40px;
     display: grid;
-    grid-template-columns: 20% 75%;
-    column-gap: 4%;
+    grid-template-columns: 22% 78%;
 
     & .post {
-        width: 200px;
+        width: 230px;
+        margin-bottom: 25px;
     }
 
     & .imgAd {
